# mainframe_demo

./: .env  __init__.py  main.py  pyproject.toml
mainframe_demo/: __init__.py
mainframe_demo/config/: settings.py
mainframe_demo/state_manager/: __init__.py  story_state.py  supervisor_state.py
mainframe_demo/tools/: __init__.py  story_generator.py  user_story_generator.py
